# sturdy-octo-parakeet

./: .cache_ggshield  .env.sample  .gitignore  Alonso Isidoro Roman.txt  README.md  pyproject.toml  requirements.txt
2_1_1_shodan_python/: pyshodan.py  shodansearch.py
2_1_2_auth_login_automatizado/: login_automation.py  pyshodan.py
2_1_3_auth_login_selenium/: login_automation.py  pyshodan.py  tcp-client  tcp-client-multi  tcp-client-multi.c  tcp-client.c  tcp-server  tcp-server-multi  tcp-server-multi.c  tcp-server.c  test-multihilo-client-server.sh
2_1_4_multithreading_python/: login_automation.py
2_2_waybackmachine/: historicalsearch.py
2_3_dns_enumeration/: dns_enumeration.py
2_4_whois_enumeration/: whois_enumeration.py
2_5_ip_geolocation/: ip_geolocation.py
2_6_phone_geolocation/: phone_golocation.py  phone_map.html
2_7_metadata_analyzer/: main.py
3_1_sniffer_tshark/: sniffer_tshark.py  test.pcap
3_3_sockets/: cliente.py
3_4_1_escaneo_hosts_sockets/: main.py
3_5_nmap_scanner_python/: nmap_scanner.py
3_6_escaneo_priorizacion_IA/: nmap_scanner.py
4_2_1_escaner_vulnerabilidades_CVEs/: main.py  vulnerability_scanner.py
4_2_2_escaner_vulnerabilidades_CVSS/: main.py  vulnerability_scanner.py
4_3_1_escaner_Nessus_creacion_sesion/: .env
4_3_2_escaner_Nessus_creacion_escaneo/: .env  main.py  nessus_scanner.py
6_1_arp_spoofing/: arp_spoofer_osx.py
6_4_dns_spoofing/: README.md  dns_spoofer_osx.py  test.sh
6_5_arp_spoofing_detector/: arp_spoofer.py  arp_spoofing_detector  arp_spoofing_detector.c  arp_spoofing_detector.py  test.sh
(+10 files in other folders)
