[tool.poetry]
name = "shodan-santiago"
version = "0.1.0"
description = ""
authors = ["Alonso Isidoro Román <alonsoir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
shodan = "^1.31.0"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"
waybackpy = "^3.0.6"
dnspython = "^2.6.1"
whois = "^1.20240129.2"
python-whois = "^0.9.4"
folium = "^0.17.0"
ipinfo = "^5.0.1"
phonenumbers = "^8.13.40"
geopy = "^2.4.1"
pillow = "^10.4.0"
pdfminer-six = "^20240706"
python-docx = "^1.1.2"
pyshark = "^0.6"
scapy = "^2.5.0"
rich = "^13.7.1"
tqdm = "^4.66.4"
pysmb = "^1.2.9.1"
python-nmap = "^0.7.1"
openai = "^1.35.13"
#pandas = "^2.2.2"
bs4 = "^0.0.2"
#numpy = "<2.0.0"  # Add this line to specify a compatible version of NumPy
pandas = "^2.2.2"
tk = "^0.1.0"
pynput = "^1.7.7"
burp = "^1.27"
streamlit = "^1.36.0"
paramiko = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
